change release fix

--- a/.github/workflows/workflow-sample.yml
+++ b/.github/workflows/workflow-sample.yml
@@ -68,5 +68,6 @@ jobs:
       - name: Adding Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "release.tar.gz,foo/*.txt"
-          bodyFile: "body.md"
+          artifacts: release go binary
+          bodyFile: body text
+          tags: V0.0.1
